Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.1.24
-
None
-
CentOS 7.x x86_64
Description
# mariabackup --defaults-file=/etc/my.cnf --backup --compress --host=127.0.0.1 --port=3306 --user=backup --password=changeme --compress-threads=16 --parallel=16 --extra-lsndir=/var/local-backup --stream=xbstream --tmpdir=/tmp/backup_3306 > /opt/backup/databases/backup_2017_06_03_08_08.xbs
|
170603 08:21:55 Connecting to MySQL server host: 127.0.0.1, user: backup, password: set, port: 3306, socket: not set
|
Using server version 10.1.24-MariaDB
|
mariabackup based on MariaDB server 10.1.24-MariaDB Linux (x86_64)
|
xtrabackup: uses posix_fadvise().
|
xtrabackup: cd to /opt/mysql
|
xtrabackup: open files limit requested 65535, set to 100001
|
xtrabackup: using the following InnoDB configuration:
|
xtrabackup: innodb_data_home_dir = /opt/mysql
|
xtrabackup: innodb_data_file_path = ibdata1:128M:autoextend
|
xtrabackup: innodb_log_group_home_dir = /opt/mysql
|
xtrabackup: innodb_log_files_in_group = 2
|
xtrabackup: innodb_log_file_size = 268435456
|
2017-06-03 08:21:55 7f1f34a25900 InnoDB: Using Linux native AIO
|
xtrabackup: using O_DIRECT
|
xtrabackupp: Warning: ignoring innodb_flush_method = O_DIRECT on Windows.
|
170603 08:21:55 >> log scanned up to (376182854)
|
2017-06-03 08:21:55 7f1f34a25900 InnoDB: Assertion failure in thread 139772003768576 in file srv0start.cc line 1475
|
InnoDB: Failing assertion: prev_space_id + 1 == undo_tablespace_ids[i]
|
InnoDB: We intentionally generate a memory trap.
|
InnoDB: Submit a detailed bug report to http://bugs.mysql.com.
|
InnoDB: If you get repeated assertion failures or crashes, even
|
InnoDB: immediately after the mysqld startup, there may be
|
InnoDB: corruption in the InnoDB tablespace. Please refer to
|
InnoDB: http://dev.mysql.com/doc/refman/5.6/en/forcing-innodb-recovery.html
|
InnoDB: about forcing recovery.
|
170603 8:21:55 [ERROR] mysqld got signal 6 ;
|
This could be because you hit a bug. It is also possible that this binary
|
or one of the libraries it was linked against is corrupt, improperly built,
|
or misconfigured. This error can also be caused by malfunctioning hardware.
|
|
|
To report this bug, see https://mariadb.com/kb/en/reporting-bugs
|
|
|
We will try our best to scrape up some info that will hopefully help
|
diagnose the problem, but since we have already crashed,
|
something is definitely wrong and this may fail.
|
|
|
Server version: 10.1.24-MariaDB
|
key_buffer_size=0
|
read_buffer_size=131072
|
max_used_connections=0
|
max_threads=1
|
thread_count=0
|
It is possible that mysqld could use up to
|
key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 5301 K bytes of memory
|
Hope that's ok; if not, decrease some variables in the equation.
|
|
|
Thread pointer: 0x0
|
Attempting backtrace. You can use the following information to find out
|
where mysqld died. If you see no messages after this, something went
|
terribly wrong...
|
stack_bottom = 0x0 thread_stack 0x48400
|
addr2line: 'mariabackup': No such file
|
mariabackup(my_print_stacktrace+0x2e)[0x7f1f355325be]
|
mariabackup(handle_fatal_signal+0x305)[0x7f1f3505c685]
|
/lib64/libpthread.so.0(+0xf370)[0x7f1f3463c370]
|
/lib64/libc.so.6(gsignal+0x37)[0x7f1f329911d7]
|
/lib64/libc.so.6(abort+0x148)[0x7f1f329928c8]
|
mariabackup(+0x91862b)[0x7f1f3538362b]
|
mariabackup(+0x3a7de4)[0x7f1f34e12de4]
|
mariabackup(_Z22xtrabackup_backup_funcv+0xc6e)[0x7f1f34e1aa6e]
|
mariabackup(main+0xb4d)[0x7f1f34df899d]
|
/lib64/libc.so.6(__libc_start_main+0xf5)[0x7f1f3297db35]
|
mariabackup(+0x3a624d)[0x7f1f34e1124d]
|
The manual page at http://dev.mysql.com/doc/mysql/en/crashing.html contains
|
information that should help you find out what is causing the crash.
|
Aborted
|
Also, there is a warning, ignoring innodb_flush_method = O_DIRECT on Windows, but the server is running on Linux.
Attachments
Issue Links
- is duplicated by
-
MDEV-13243 MariaBackup failed, while percona-xtrabackup works
-
- Closed
-
-
MDEV-13305 InnoDB: Assertion failure in file /home/buildbot/buildbot/build/mariadb-10.2.7/storage/innobase/srv/srv0start.cc line 960
-
- Closed
-
- relates to
-
MDEV-13560 restart_and_restore.inc does not pass --innodb-undo-tablespaces to --copy-back
-
- Closed
-
-
MDEV-13561 Mariabackup is incompatible with retroactively created innodb_undo_tablespaces
-
- Closed
-
-
MDEV-27121 mariabackup incompatible with disabled dedicated undo log tablespaces
-
- Closed
-