MDEV-12988 backup fails if innodb_undo_tablespaces>0

srv_undo_tablespaces_init(): In Mariabackup backup and restore modes,
do initialize the array of undo_tablespace_ids[].